TripleO pike release
Change-Id: Icd84bdb5e9a34bc129053647b7b7061e115c3498

--- a/deliverables/pike/instack-undercloud.yaml
+++ b/deliverables/pike/instack-undercloud.yaml
@@ -46,5 +46,9 @@ releases:
       - hash: de4dd54384a34839d38fc42fd1e35442d34ef810
         repo: openstack/instack-undercloud
     version: 7.4.4
+  - projects:
+      - hash: 1e0dd6786e3a4326a37e47541844657524e689a9
+        repo: openstack/instack-undercloud
+    version: 7.4.5
 team: tripleo
 type: other
