--- a/deliverables/pike/os-apply-config.yaml
+++ b/deliverables/pike/os-apply-config.yaml
@@ -22,5 +22,9 @@ releases:
       - hash: 1587707645de0fa45e29c0c16f8520175e82b940
         repo: openstack/os-apply-config
     version: 7.2.0
+  - projects:
+      - hash: 294cd491b585dcdeb199d3d8c3fc0160707ccefe
+        repo: openstack/os-apply-config
+    version: 7.2.1
 team: tripleo
 type: other
