--- a/deliverables/pike/os-collect-config.yaml
+++ b/deliverables/pike/os-collect-config.yaml
@@ -22,5 +22,9 @@ releases:
       - hash: ea5a49ceaf5f2d0923aaea4838aa20c84399ed76
         repo: openstack/os-collect-config
     version: 7.2.0
+  - projects:
+      - hash: 89d00587ebe29921d2a0cfa8e2cf88f85118db33
+        repo: openstack/os-collect-config
+    version: 7.2.1
 team: tripleo
 type: other
