--- a/deliverables/pike/os-net-config.yaml
+++ b/deliverables/pike/os-net-config.yaml
@@ -30,5 +30,9 @@ releases:
       - hash: 9ce34d529d7faa65cfa6f88aaecf735f92c4c89b
         repo: openstack/os-net-config
     version: 7.3.1
+  - projects:
+      - hash: d71230766001743c9fac6faa683e3bdba98e3048
+        repo: openstack/os-net-config
+    version: 7.3.2
 team: tripleo
 type: other
