--- a/deliverables/pike/paunch.yaml
+++ b/deliverables/pike/paunch.yaml
@@ -36,3 +36,7 @@ releases:
       - hash: 30d03232c1e1d7f57a5877d52a885884a3534af7
         repo: openstack/paunch
     version: 1.5.1
+  - projects:
+      - hash: 4bb695a910995af34f57558afbccfb6e624c1013
+        repo: openstack/paunch
+    version: 1.5.2
