--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -41,5 +41,9 @@ releases:
       - hash: f2b1ec7ee9c70563ed682c314910c8fd4c6871aa
         repo: openstack/puppet-tripleo
     version: 7.4.4
+  - projects:
+      - hash: 3633eeecacfdb58c5d5b8bd3150f70b1873c3102
+        repo: openstack/puppet-tripleo
+    version: 7.4.5
 team: tripleo
 type: other
