--- a/deliverables/pike/python-tripleoclient.yaml
+++ b/deliverables/pike/python-tripleoclient.yaml
@@ -38,6 +38,10 @@ releases:
       - hash: 4198fe6dc038011693a21e691351357e3005e476
         repo: openstack/python-tripleoclient
     version: 7.3.4
+  - projects:
+      - hash: 2539361403ccc98344631d8bae2a3abcc990ed7a
+        repo: openstack/python-tripleoclient
+    version: 7.3.5
 team: tripleo
 type: library
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/pike.html
