--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -54,5 +54,9 @@ releases:
       - hash: 643fa47ab15fd1ae6ecff2495abb2077ce0108fb
         repo: openstack/tripleo-common
     version: 7.6.4
+  - projects:
+      - hash: 37f3f455d469e9eba4201a1a07d399273f28faf2
+        repo: openstack/tripleo-common
+    version: 7.6.5
 team: tripleo
 type: other
