--- a/deliverables/pike/tripleo-image-elements.yaml
+++ b/deliverables/pike/tripleo-image-elements.yaml
@@ -35,5 +35,9 @@ releases:
       - hash: 2e61e3191633f787e6afc4f6a4d64e53004d7aba
         repo: openstack/tripleo-image-elements
     version: 7.0.1
+  - projects:
+      - hash: 7f5f87f8cce3f3db7c13f846d78ac00a25b8050c
+        repo: openstack/tripleo-image-elements
+    version: 7.0.2
 team: tripleo
 type: other
