--- a/deliverables/pike/tripleo-puppet-elements.yaml
+++ b/deliverables/pike/tripleo-puppet-elements.yaml
@@ -35,5 +35,9 @@ releases:
       - hash: 82d7e6c905bbd3f7b2c81f4e8838b3f9b2978b44
         repo: openstack/tripleo-puppet-elements
     version: 7.0.1
+  - projects:
+      - hash: f68f717d87fdc74e932098ef361649b054e6439f
+        repo: openstack/tripleo-puppet-elements
+    version: 7.0.2
 team: tripleo
 type: other
