--- a/deliverables/pike/tripleo-ui.yaml
+++ b/deliverables/pike/tripleo-ui.yaml
@@ -42,5 +42,9 @@ releases:
       - hash: 6c8aaef6c6989b7ed6424aa2133bca2721b0f833
         repo: openstack/tripleo-ui
     version: 7.4.4
+  - projects:
+      - hash: f538ae44c0e2eccad63e38acb1b72aeebe45c6ea
+        repo: openstack/tripleo-ui
+    version: 7.4.5
 team: tripleo
 type: other
