--- a/deliverables/pike/tripleo-validations.yaml
+++ b/deliverables/pike/tripleo-validations.yaml
@@ -34,5 +34,9 @@ releases:
       - hash: 59be9c6b08a3e385cfe7464305fcdfe40560f1ac
         repo: openstack/tripleo-validations
     version: 7.4.2
+  - projects:
+      - hash: bbae079f82db71d248144dd410ccc4c735903549
+        repo: openstack/tripleo-validations
+    version: 7.4.3
 team: tripleo
 type: other
