--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -47,5 +47,9 @@ releases:
       - hash: 994922a8ba996fe68d047df0e1486fa805dbea31
         repo: openstack/tripleo-heat-templates
     version: 7.0.4
+  - projects:
+      - hash: 74e40b21f08abd3c6091bf7c3f78b77f136df6d8
+        repo: openstack/tripleo-heat-templates
+    version: 7.0.5
 team: tripleo
 type: other
