--- a/deliverables/queens/castellan.yaml
+++ b/deliverables/queens/castellan.yaml
@@ -20,3 +20,7 @@ releases:
       - hash: ac4fc22681e5859756186ec457529ea7c90c2652
         repo: openstack/castellan
     version: 0.15.0
+  - projects:
+      - hash: aa0216d66e558d06d89ad4ccf5ffc4061dc5ccd7
+        repo: openstack/castellan
+    version: 0.15.1
