--- a/deliverables/pike/ceilometer.yaml
+++ b/deliverables/pike/ceilometer.yaml
@@ -17,6 +17,10 @@ releases:
       - hash: 7bee6ae2ef55712ae08cce57faf57061988282b6
         repo: openstack/ceilometer
     version: 9.0.2
+  - projects:
+      - hash: f5fed88724124a9f6c017d67fc0b7ac3c1ab139e
+        repo: openstack/ceilometer
+    version: 9.0.3
 branches:
   - location: 9.0.0
     name: stable/pike
