--- a/deliverables/queens/keystoneauth.yaml
+++ b/deliverables/queens/keystoneauth.yaml
@@ -8,5 +8,10 @@ releases:
         repo: openstack/keystoneauth
         tarball-base: keystoneauth1
     version: 3.2.0
+  - projects:
+      - hash: ba6650e9c7971b696f71e159e620c40ec39d5677
+        repo: openstack/keystoneauth
+        tarball-base: keystoneauth1
+    version: 3.3.0
 team: keystone
 type: library
