--- a/deliverables/queens/python-brick-cinderclient-ext.yaml
+++ b/deliverables/queens/python-brick-cinderclient-ext.yaml
@@ -4,3 +4,8 @@ launchpad: python-cinderclient
 release-model: cycle-with-intermediary
 team: cinder
 type: library
+releases:
+  - projects:
+      - hash: 17e94f506b18ff1354ce8938467e31f6ae867c35
+        repo: openstack/python-brick-cinderclient-ext
+    version: 0.6.0
