--- a/deliverables/queens/os-brick.yaml
+++ b/deliverables/queens/os-brick.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 5fb632f96a16cc42f78b69f451b521304a2dc79a
         repo: openstack/os-brick
     version: 2.1.0
+  - projects:
+      - hash: a5c60d94d86db6e9749ab1b4e462549a65dab31a
+        repo: openstack/os-brick
+    version: 2.1.1
