--- a/deliverables/queens/ovsdbapp.yaml
+++ b/deliverables/queens/ovsdbapp.yaml
@@ -20,3 +20,7 @@ releases:
     projects:
       - repo: openstack/ovsdbapp
         hash: 158ae06bce0f56e93677f94c59f81e5e76ee1ccc
+  - version: 0.9.0
+    projects:
+      - repo: openstack/ovsdbapp
+        hash: 7d4b4b6d7943aac4f4ed89a5e6d2c30d9b9de887
