--- a/deliverables/pike/oslo.rootwrap.yaml
+++ b/deliverables/pike/oslo.rootwrap.yaml
@@ -31,5 +31,9 @@ releases:
       - hash: b7b63e2ecb50ba66a1f152ae6f71dd208326fbee
         repo: openstack/oslo.rootwrap
     version: 5.9.1
+  - projects:
+      - hash: 801938bbf0e061343dfb64786af52aae911e7b2f
+        repo: openstack/oslo.rootwrap
+    version: 5.9.2
 team: oslo
 type: library
