--- a/deliverables/ocata/oslo.rootwrap.yaml
+++ b/deliverables/ocata/oslo.rootwrap.yaml
@@ -29,3 +29,7 @@ releases:
     projects:
       - repo: openstack/oslo.rootwrap
         hash: fdacd0e60817db8455b3c2f21b60e8a2130953aa
+  - projects:
+      - hash: 3ab92c6091fb175973a96244c5c1a4d3226f7373
+        repo: openstack/oslo.rootwrap
+    version: 5.4.2
