Puppet OpenStack post-Pike releases
Change-Id: I8ca7791dfad510a01286dccdaebc1f2a505408f1

--- a/deliverables/pike/puppet-aodh.yaml
+++ b/deliverables/pike/puppet-aodh.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: e2ec9ed7ba90fd2330e0e3d53d940e92feecaa3f
         repo: openstack/puppet-aodh
     version: 11.3.0
+  - projects:
+      - hash: 97e5d9a2966aa878455a370e4a71916ab1a3c97c
+        repo: openstack/puppet-aodh
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
