--- a/deliverables/pike/puppet-barbican.yaml
+++ b/deliverables/pike/puppet-barbican.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 8241a1d13be6c3ee6344fa46dcfc045439044e76
         repo: openstack/puppet-barbican
     version: 11.3.0
+  - projects:
+      - hash: 7ed4cbb2f9e3fe6a9813348d1803e53ad189b5a7
+        repo: openstack/puppet-barbican
+    version: 11.3.1
 team: 'Puppet OpenStack'
 type: other
 branches:
