--- a/deliverables/pike/puppet-ceilometer.yaml
+++ b/deliverables/pike/puppet-ceilometer.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: c64b7a7e5007d207589865c90f6cd57b7dbf86e0
         repo: openstack/puppet-ceilometer
     version: 11.3.0
+  - projects:
+      - hash: 1e99913efb24a4dcd00d3abb89649791cdc7d753
+        repo: openstack/puppet-ceilometer
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
