--- a/deliverables/pike/puppet-cinder.yaml
+++ b/deliverables/pike/puppet-cinder.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: aa8b4dac92ce875d7d2c71066e2c16774d9e58e3
         repo: openstack/puppet-cinder
     version: 11.3.0
+  - projects:
+      - hash: fcbe48a6ea3363990848ef884fc93f6bc3f55d4e
+        repo: openstack/puppet-cinder
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
