--- a/deliverables/pike/puppet-congress.yaml
+++ b/deliverables/pike/puppet-congress.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: fb953cdf0d34dcaf4a51872767378f7c2e99d2fb
         repo: openstack/puppet-congress
     version: 11.3.0
+  - projects:
+      - hash: 8b88bf0052cb863b24e60e3575b8b2387535a847
+        repo: openstack/puppet-congress
+    version: 11.3.1
 team: 'Puppet OpenStack'
 type: other
 branches:
