--- a/deliverables/pike/puppet-designate.yaml
+++ b/deliverables/pike/puppet-designate.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 2ae0185e2f8253b0fe9c3ca8099670802470c02d
         repo: openstack/puppet-designate
     version: 11.3.0
+  - projects:
+      - hash: 3a3017f2959ed9b1dfc20f68bafe3141602c6e4c
+        repo: openstack/puppet-designate
+    version: 11.3.1
 team: 'Puppet OpenStack'
 type: other
 branches:
