--- a/deliverables/pike/puppet-glance.yaml
+++ b/deliverables/pike/puppet-glance.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 02ab90f67d62a7d79f16873ba531b5224c73613a
         repo: openstack/puppet-glance
     version: 11.3.0
+  - projects:
+      - hash: 7a8bcc32bba6ff1962159e48bb7fa196d4a99c89
+        repo: openstack/puppet-glance
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
