--- a/deliverables/pike/puppet-gnocchi.yaml
+++ b/deliverables/pike/puppet-gnocchi.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: e960bf0af37891acb78d5a6b28b08254a50c1fe1
         repo: openstack/puppet-gnocchi
     version: 11.3.0
+  - projects:
+      - hash: b64ae2f3b970b256454419bc79694bc66f0090a5
+        repo: openstack/puppet-gnocchi
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
