--- a/deliverables/pike/puppet-heat.yaml
+++ b/deliverables/pike/puppet-heat.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: cfbfd0b14783d628dfa5695f5c3d58757eba969b
         repo: openstack/puppet-heat
     version: 11.3.0
+  - projects:
+      - hash: fb56f6aa51016bf5e89b4450feb7aa863b0c58ee
+        repo: openstack/puppet-heat
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
