--- a/deliverables/pike/puppet-horizon.yaml
+++ b/deliverables/pike/puppet-horizon.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 8716c36109044eab9497156aca5f1b49ec0fada3
         repo: openstack/puppet-horizon
     version: 11.4.0
+  - projects:
+      - hash: 0d25b341a1d1c7afe55c35aceb03bdbed5c4d9e8
+        repo: openstack/puppet-horizon
+    version: 11.4.1
 team: 'Puppet OpenStack'
 type: other
 branches:
