--- a/deliverables/pike/puppet-ironic.yaml
+++ b/deliverables/pike/puppet-ironic.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: aadbcf5ae7c6c4a96efbf8323a0b175932653e55
         repo: openstack/puppet-ironic
     version: 11.3.0
+  - projects:
+      - hash: 34b1d3504b41a50244894f8dbbd0b9e796997a44
+        repo: openstack/puppet-ironic
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
