--- a/deliverables/pike/puppet-keystone.yaml
+++ b/deliverables/pike/puppet-keystone.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 305c91cac00f720ad6461b442e71b52b12f9ae57
         repo: openstack/puppet-keystone
     version: 11.3.0
+  - projects:
+      - hash: b0df3f23303320a33c4672316c4f3469e3fdb182
+        repo: openstack/puppet-keystone
+    version: 11.3.1
 team: 'Puppet OpenStack'
 type: other
 branches:
