--- a/deliverables/pike/puppet-magnum.yaml
+++ b/deliverables/pike/puppet-magnum.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 0112f1b96f5d377fbc797d2c54fc37958f8ca21d
         repo: openstack/puppet-magnum
     version: 11.3.1
+  - projects:
+      - hash: 42cdce25159612793e10db2f1c61144ec5ee0d02
+        repo: openstack/puppet-magnum
+    version: 11.3.2
 team: 'Puppet OpenStack'
 type: other
 branches:
