--- a/deliverables/pike/puppet-manila.yaml
+++ b/deliverables/pike/puppet-manila.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: deaaea9a56c025edb4d33ba366603963b9924d27
         repo: openstack/puppet-manila
     version: 11.3.0
+  - projects:
+      - hash: 5f2b4d892d3a6e7ab96781de8a1869d24d772d13
+        repo: openstack/puppet-manila
+    version: 11.3.1
 team: 'Puppet OpenStack'
 type: other
 branches:
