--- a/deliverables/pike/puppet-mistral.yaml
+++ b/deliverables/pike/puppet-mistral.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 40d572b4c6d61dc9c5bbd2dafc4696ccf0b8389e
         repo: openstack/puppet-mistral
     version: 11.3.0
+  - projects:
+      - hash: 71f28bdd8d030137ee02353ea1d5cdbc7a60a60d
+        repo: openstack/puppet-mistral
+    version: 11.3.1
 team: 'Puppet OpenStack'
 type: other
 branches:
