--- a/deliverables/pike/puppet-murano.yaml
+++ b/deliverables/pike/puppet-murano.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: af37d220d3868267700692fb1d45356a1457eba5
         repo: openstack/puppet-murano
     version: 11.3.1
+  - projects:
+      - hash: 76e9691261f2129966052b5d85a2c6872dd833de
+        repo: openstack/puppet-murano
+    version: 11.3.2
 team: 'Puppet OpenStack'
 type: other
 branches:
