--- a/deliverables/pike/puppet-nova.yaml
+++ b/deliverables/pike/puppet-nova.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: a8fc794d6ca7b42051008acabb3d8d11678c6b08
         repo: openstack/puppet-nova
     version: 11.4.0
+  - projects:
+      - hash: 366597f2ff86689fbf3d6cfa3599658dd2c8c6a5
+        repo: openstack/puppet-nova
+    version: 11.4.1
 team: 'Puppet OpenStack'
 type: other
 branches:
