--- a/deliverables/pike/puppet-octavia.yaml
+++ b/deliverables/pike/puppet-octavia.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: b7fa7de2f7a7c056623f66f40028a3007cc2bbc9
         repo: openstack/puppet-octavia
     version: 11.3.0
+  - projects:
+      - hash: 0b18cbd94d971db0d9bcb297d02beb0ae3ba5bc3
+        repo: openstack/puppet-octavia
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
