--- a/deliverables/pike/puppet-openstack_extras.yaml
+++ b/deliverables/pike/puppet-openstack_extras.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: b09275eca0083e8eb8c22d5a25cb9a4b907e2983
         repo: openstack/puppet-openstack_extras
     version: 11.3.0
+  - projects:
+      - hash: baf8331a1ace582d9adf94bf7cbc2633c080cc90
+        repo: openstack/puppet-openstack_extras
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
