--- a/deliverables/pike/puppet-openstacklib.yaml
+++ b/deliverables/pike/puppet-openstacklib.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 79a799f5d78667b5eee81e71782e8591f2e62ecc
         repo: openstack/puppet-openstacklib
     version: 11.3.0
+  - projects:
+      - hash: 9ebb0e395f8339220d6b0269d1d6dc94acdbe553
+        repo: openstack/puppet-openstacklib
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
