--- a/deliverables/pike/puppet-oslo.yaml
+++ b/deliverables/pike/puppet-oslo.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 5ad200e9d8af200a8f50f86a2db4cf3f36ab2a4c
         repo: openstack/puppet-oslo
     version: 11.3.0
+  - projects:
+      - hash: aef65a146d20cbcda31940dd57ef44f23b33970b
+        repo: openstack/puppet-oslo
+    version: 11.3.1
 team: 'Puppet OpenStack'
 type: other
 branches:
