--- a/deliverables/pike/puppet-ovn.yaml
+++ b/deliverables/pike/puppet-ovn.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: f67dfe8f1247e5a61335bcf656418d88cb833f01
         repo: openstack/puppet-ovn
     version: 11.3.0
+  - projects:
+      - hash: 69361c7d7d88eca58e93a1ba7b88b488eafc6d05
+        repo: openstack/puppet-ovn
+    version: 11.3.1
 team: 'Puppet OpenStack'
 type: other
 branches:
