--- a/deliverables/pike/puppet-panko.yaml
+++ b/deliverables/pike/puppet-panko.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: edd8ddb567549451dad80dfe8dbd3f47be79a748
         repo: openstack/puppet-panko
     version: 11.3.0
+  - projects:
+      - hash: 29d6a8e4da44f3eeb4db7ef60197e2d01745a6eb
+        repo: openstack/puppet-panko
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
