--- a/deliverables/pike/puppet-sahara.yaml
+++ b/deliverables/pike/puppet-sahara.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 7fae22a990c185bff8fa4892c82207e690caed59
         repo: openstack/puppet-sahara
     version: 11.3.0
+  - projects:
+      - hash: 2c50796bb3cbb613a0a33d47d8f53020bc54659c
+        repo: openstack/puppet-sahara
+    version: 11.3.1
 team: 'Puppet OpenStack'
 type: other
 branches:
