--- a/deliverables/pike/puppet-swift.yaml
+++ b/deliverables/pike/puppet-swift.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: bdd01148d004005fe4fadc182a97a40d5f7f1815
         repo: openstack/puppet-swift
     version: 11.3.0
+  - projects:
+      - hash: cbb4ca1f095bfe89ae0b412f64599272d172ed33
+        repo: openstack/puppet-swift
+    version: 11.3.1
 team: 'Puppet OpenStack'
 type: other
 branches:
