--- a/deliverables/pike/puppet-tacker.yaml
+++ b/deliverables/pike/puppet-tacker.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 3147f8b8992aac971bf9addc2ae0bf818c3e3737
         repo: openstack/puppet-tacker
     version: 11.3.0
+  - projects:
+      - hash: d47b29c509f22392f2e8ae8d160ec2d64e340eed
+        repo: openstack/puppet-tacker
+    version: 11.3.1
 team: 'Puppet OpenStack'
 type: other
 branches:
