--- a/deliverables/pike/puppet-tempest.yaml
+++ b/deliverables/pike/puppet-tempest.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 015f7add77f5796c15660c495da1b5f6f8ec0a74
         repo: openstack/puppet-tempest
     version: 11.3.0
+  - projects:
+      - hash: 2a6ae29cc80fb9fbb879b78211c6b5a505b9d3e3
+        repo: openstack/puppet-tempest
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
