--- a/deliverables/pike/puppet-trove.yaml
+++ b/deliverables/pike/puppet-trove.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: ba0ac93b0f1f0a9b271d112a5e7a732f49c33b86
         repo: openstack/puppet-trove
     version: 11.3.0
+  - projects:
+      - hash: 55b06aabe08077f30ac251f498f5269109a177ac
+        repo: openstack/puppet-trove
+    version: 11.3.1
 team: 'Puppet OpenStack'
 type: other
 branches:
