--- a/deliverables/pike/puppet-vswitch.yaml
+++ b/deliverables/pike/puppet-vswitch.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: d4b010db56d9a350ff48cb3b2721df3aefd4df0a
         repo: openstack/puppet-vswitch
     version: 7.3.0
+  - projects:
+      - hash: 5df30ae29f5464069db7516d237aa6e03882e41d
+        repo: openstack/puppet-vswitch
+    version: 7.3.1
 team: 'Puppet OpenStack'
 type: other
 branches:
