--- a/deliverables/pike/puppet-watcher.yaml
+++ b/deliverables/pike/puppet-watcher.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: a1efeb7bf1fc393ae7524cfa3daaf041c34dedfd
         repo: openstack/puppet-watcher
     version: 11.3.0
+  - projects:
+      - hash: e22069c830abf0d625ef3c7c67621875265e1a28
+        repo: openstack/puppet-watcher
+    version: 11.3.1
 team: 'Puppet OpenStack'
 type: other
 branches:
