--- a/deliverables/pike/puppet-zaqar.yaml
+++ b/deliverables/pike/puppet-zaqar.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 915c8f7ac5136879608f6c2aab48bdf145a6b00d
         repo: openstack/puppet-zaqar
     version: 11.3.0
+  - projects:
+      - hash: eb1bca9a09c81f961669db7d92d723cfbff84a52
+        repo: openstack/puppet-zaqar
+    version: 11.3.1
 team: 'Puppet OpenStack'
 type: other
 branches:
