--- a/deliverables/pike/puppet-ec2api.yaml
+++ b/deliverables/pike/puppet-ec2api.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: f73cbf57efde3b5c9fe5dfae22b61900b5c1185b
         repo: openstack/puppet-ec2api
     version: 11.3.0
+  - projects:
+      - hash: 124ff44782b6d57671bc52664a2c1dd3efeb5bc4
+        repo: openstack/puppet-ec2api
+    version: 11.3.1
 team: 'Puppet OpenStack'
 type: other
 branches:
