--- a/deliverables/pike/puppet-neutron.yaml
+++ b/deliverables/pike/puppet-neutron.yaml
@@ -18,6 +18,10 @@ releases:
       - hash: 9ab45b0dccd43f9afe4397be18be7e3cb0291609
         repo: openstack/puppet-neutron
     version: 11.3.0
+  - projects:
+      - hash: 96e5d9a96f61ab53f989a850444b96db76d07417
+        repo: openstack/puppet-neutron
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
