Add oslo releases for queens Dec 04, 2017
Change-Id: I7d2df57b18b84ea60825018035a22f1e3b8753b9

--- a/deliverables/queens/automaton.yaml
+++ b/deliverables/queens/automaton.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 0820ec002f88b8385d1e6a33b583c006dd64d57f
         repo: openstack/automaton
     version: 1.13.0
+  - projects:
+      - hash: 67b25ef3d05ef91f4662a35c210b467500a78ff0
+        repo: openstack/automaton
+    version: 1.13.1
