--- a/deliverables/queens/castellan.yaml
+++ b/deliverables/queens/castellan.yaml
@@ -24,3 +24,7 @@ releases:
       - hash: aa0216d66e558d06d89ad4ccf5ffc4061dc5ccd7
         repo: openstack/castellan
     version: 0.15.1
+  - projects:
+      - hash: c67357173e6e7127ad1f4528cb243bd96b91efad
+        repo: openstack/castellan
+    version: 0.16.0
