--- a/deliverables/queens/debtcollector.yaml
+++ b/deliverables/queens/debtcollector.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: bdac534f8e26afcdb71b137634d63d3f7faeeb07
         repo: openstack/debtcollector
     version: 1.18.0
+  - projects:
+      - hash: e1271aaa9785c72ea67961c58ea9a17b64eb7b3f
+        repo: openstack/debtcollector
+    version: 1.19.0
