--- a/deliverables/queens/futurist.yaml
+++ b/deliverables/queens/futurist.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 32649363fe66ba2ebb8275a77a1856d884c4ffee
         repo: openstack/futurist
     version: 1.4.0
+  - projects:
+      - hash: 03883f4ec646148e29f38376f65b33945cdccab0
+        repo: openstack/futurist
+    version: 1.5.0
