--- a/deliverables/queens/oslo.i18n.yaml
+++ b/deliverables/queens/oslo.i18n.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: d808cf6573bbd7281766cb72656a92431f1d9d6a
         repo: openstack/oslo.i18n
     version: 3.18.0
+  - projects:
+      - hash: 79e468edacd717a69f5c279ffab80f3163b6b4e7
+        repo: openstack/oslo.i18n
+    version: 3.19.0
