--- a/deliverables/queens/oslo.log.yaml
+++ b/deliverables/queens/oslo.log.yaml
@@ -21,3 +21,7 @@ releases:
       - hash: 1608ad457529ea5b2866de1b6a704872cd8fe078
         repo: openstack/oslo.log
     version: 3.34.0
+  - projects:
+      - hash: a96f9fa7721e5314baff2f61bc86126045760842
+        repo: openstack/oslo.log
+    version: 3.35.0
