--- a/deliverables/queens/oslo.messaging.yaml
+++ b/deliverables/queens/oslo.messaging.yaml
@@ -25,3 +25,7 @@ releases:
       - hash: 02056bfb12f6fb87a47af177cb9d1c95376cad8c
         repo: openstack/oslo.messaging
     version: 5.34.0
+  - projects:
+      - hash: b6b86bc7b97c63e34a1c561603d33c6d07c4f728
+        repo: openstack/oslo.messaging
+    version: 5.34.1
