--- a/deliverables/queens/oslo.middleware.yaml
+++ b/deliverables/queens/oslo.middleware.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: efdbe698f5a2ac31faf520637447b9cdaae0af95
         repo: openstack/oslo.middleware
     version: 3.32.1
+  - projects:
+      - hash: 9d75e6c1fe43d1e4b43d1d9262473cc60aa01e76
+        repo: openstack/oslo.middleware
+    version: 3.33.0
