--- a/deliverables/queens/oslo.policy.yaml
+++ b/deliverables/queens/oslo.policy.yaml
@@ -29,3 +29,7 @@ releases:
       - hash: 449d41fd96d012ff4bafd06fc11b1b054be99cc5
         repo: openstack/oslo.policy
     version: 1.30.0
+  - projects:
+      - hash: 670f32ee5320f76bca7dadddb94f213e71dd3012
+        repo: openstack/oslo.policy
+    version: 1.31.0
