--- a/deliverables/queens/oslo.privsep.yaml
+++ b/deliverables/queens/oslo.privsep.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/oslo.privsep
         hash: 8b0d620880dcb4ebbc47e10a5b437039cf403dc6
+  - projects:
+      - hash: 7486ad4f35f31992f4ba6356857130ed635988d2
+        repo: openstack/oslo.privsep
+    version: 1.24.0
