--- a/deliverables/queens/oslo.reports.yaml
+++ b/deliverables/queens/oslo.reports.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: b5d9bb98c38f7caf55223b2411780505f0131b14
         repo: openstack/oslo.reports
     version: 1.24.0
+  - projects:
+      - hash: 80ec3ef091c847973a5b124610ba878b43b8d80e
+        repo: openstack/oslo.reports
+    version: 1.25.0
