--- a/deliverables/queens/oslo.rootwrap.yaml
+++ b/deliverables/queens/oslo.rootwrap.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 2e9742f6ade397646c950a5be71ff5e5ce5677e2
         repo: openstack/oslo.rootwrap
     version: 5.11.0
+  - projects:
+      - hash: e3fded79c12ad30ffee802613707a24005a5260c
+        repo: openstack/oslo.rootwrap
+    version: 5.12.0
