--- a/deliverables/queens/oslo.serialization.yaml
+++ b/deliverables/queens/oslo.serialization.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: c1a7079c26d27a2e46cca26963d3d9aa040bdbe8
         repo: openstack/oslo.serialization
     version: 2.21.2
+  - projects:
+      - hash: 50af68754a240b0cd49cdd40eaf0bbc2724fa7f3
+        repo: openstack/oslo.serialization
+    version: 2.22.0
