--- a/deliverables/queens/oslo.service.yaml
+++ b/deliverables/queens/oslo.service.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 704f00f5740111072c68b49a4f7db33585557f95
         repo: openstack/oslo.service
     version: 1.27.0
+  - projects:
+      - hash: 5c9253bb422907cebbf59a34a8eb4a61f691927d
+        repo: openstack/oslo.service
+    version: 1.28.0
