--- a/deliverables/queens/oslo.versionedobjects.yaml
+++ b/deliverables/queens/oslo.versionedobjects.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: 15c83a2654d94b364b0662c61b5ecd4b38569f62
         repo: openstack/oslo.versionedobjects
     version: 1.29.0
+  - projects:
+      - hash: 9d53c73f2635c4b7a3c1212849d22df13d2001e7
+        repo: openstack/oslo.versionedobjects
+    version: 1.30.0
