--- a/deliverables/queens/oslo.vmware.yaml
+++ b/deliverables/queens/oslo.vmware.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: f3eab645dace5232cac7e99d6b8c0b54f4fc1894
         repo: openstack/oslo.vmware
     version: 2.24.0
+  - projects:
+      - hash: 9574ad69aca08e478979c6f3ba2f232e6f589714
+        repo: openstack/oslo.vmware
+    version: 2.25.0
