--- a/deliverables/queens/oslo.db.yaml
+++ b/deliverables/queens/oslo.db.yaml
@@ -25,3 +25,7 @@ releases:
       - hash: c682bfad389e60a8deb175abf9acc0b0f2472dcb
         repo: openstack/oslo.db
     version: 4.30.0
+  - projects:
+      - hash: 0260f0e86b1f981b21c28055eb8fcffbb803344c
+        repo: openstack/oslo.db
+    version: 4.31.0
