--- a/deliverables/queens/stevedore.yaml
+++ b/deliverables/queens/stevedore.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: 6720cf7ed0b031e9e37c0f268a5a485688fe66ec
         repo: openstack/stevedore
     version: 1.27.1
+  - projects:
+      - hash: 2472e8c9c27affe95c1541971a677a107a0d6ad4
+        repo: openstack/stevedore
+    version: 1.28.0
