--- a/deliverables/pike/oslo.messaging.yaml
+++ b/deliverables/pike/oslo.messaging.yaml
@@ -69,6 +69,10 @@ releases:
       - hash: a07d852b237d229a0f4dd55fd83379c0581e44e9
         repo: openstack/oslo.messaging
     version: 5.30.1
+  - projects:
+      - hash: 221664faa128557fa1eb415837675a55a1560131
+        repo: openstack/oslo.messaging
+    version: 5.30.2
 branches:
   - name: stable/pike
     location: 5.30.0
