--- a/deliverables/queens/searchlight-ui.yaml
+++ b/deliverables/queens/searchlight-ui.yaml
@@ -3,3 +3,8 @@ launchpad: searchlight
 release-model: cycle-with-milestones
 team: searchlight
 type: horizon-plugin
+releases:
+  - version: 4.0.0.0b2
+    projects:
+      - repo: openstack/searchlight-ui
+        hash: e9cc9b8b50a37082fda051dfd583a1ef26fd7d5e
