--- a/deliverables/pike/ironic-python-agent.yaml
+++ b/deliverables/pike/ironic-python-agent.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: bd8c6c7420c5a913ff407da569c1b8dfbc0a488a
         repo: openstack/ironic-python-agent
     version: 2.2.2
+  - projects:
+      - hash: 60c3d8d0854ff1e476302ac3d512bdfe03ba18c5
+        repo: openstack/ironic-python-agent
+    version: 2.2.3
 branches:
   - location: 2.2.0
     name: stable/pike
