TripleO queens m2 release
Change-Id: I8c4701b8a80247ffb1461728c05a3be04344a03e

--- a/deliverables/queens/instack.yaml
+++ b/deliverables/queens/instack.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 34c8b7148e0fd0717d7ade755d003a1f3d70b68d
         repo: openstack/instack
     version: 8.0.0
+  - projects:
+      - hash: d71921cd87e5a7bdd85bb218c8f7b0c5654a0b01
+        repo: openstack/instack
+    version: 8.1.0
