--- a/deliverables/queens/os-collect-config.yaml
+++ b/deliverables/queens/os-collect-config.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: f7f49448a5a0c54ac4dbf56b8809ee1f365e038f
         repo: openstack/os-collect-config
     version: 8.0.0
+  - projects:
+      - hash: fd530b4294dc94ae64dfe0bdc70c628d0402974e
+        repo: openstack/os-collect-config
+    version: 8.1.0
