--- a/deliverables/queens/os-net-config.yaml
+++ b/deliverables/queens/os-net-config.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 44f3957b9ef1fa15797520ee1f0e3fc42e0c2b27
         repo: openstack/os-net-config
     version: 8.0.0
+  - projects:
+      - hash: bb7d8296d7a27ed2ddd9702b56c1fb0d6ae37b6e
+        repo: openstack/os-net-config
+    version: 8.1.0
