--- a/deliverables/queens/paunch.yaml
+++ b/deliverables/queens/paunch.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: bc1ea3c5e508203ca0a7b255596b684eb303cc43
         repo: openstack/paunch
     version: 2.0.0
+  - projects:
+      - hash: e1f2d3500bffd4418c69afca649bbfb333699dd6
+        repo: openstack/paunch
+    version: 2.1.0
