--- a/deliverables/queens/puppet-tripleo.yaml
+++ b/deliverables/queens/puppet-tripleo.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 50de2dafa328771332d1e28218dc4e4786cfca77
         repo: openstack/puppet-tripleo
     version: 8.0.0
+  - projects:
+      - hash: ce3432da8cd2267f3a7758d1168825d1f0d8fa0a
+        repo: openstack/puppet-tripleo
+    version: 8.1.0
