--- a/deliverables/queens/python-tripleoclient.yaml
+++ b/deliverables/queens/python-tripleoclient.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: d8e2ad26940e5fe83140e60f5ef8509775da3463
         repo: openstack/python-tripleoclient
     version: 8.0.0
+  - projects:
+      - hash: cc5fee3cabfcb826f8f5d64ba7aebd4024230289
+        repo: openstack/python-tripleoclient
+    version: 8.1.0
