--- a/deliverables/queens/tripleo-common.yaml
+++ b/deliverables/queens/tripleo-common.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 89804e9b30fee4bd884107ce66178295011d8bb5
         repo: openstack/tripleo-common
     version: 8.1.0
+  - projects:
+      - hash: ed3fdfdb0386a90e61c9aa7702e4e88bf34e1d62
+        repo: openstack/tripleo-common
+    version: 8.2.0
