--- a/deliverables/queens/tripleo-heat-templates.yaml
+++ b/deliverables/queens/tripleo-heat-templates.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: f8efc0bd5b32f2964aa5b05d094b751df0a7feff
         repo: openstack/tripleo-heat-templates
     version: 8.0.0.0b1
+  - projects:
+      - hash: 2f9bd14db7cdeaeb448c40a9f8f82041e87a7c5f
+        repo: openstack/tripleo-heat-templates
+    version: 8.0.0.0b2
