--- a/deliverables/queens/tripleo-image-elements.yaml
+++ b/deliverables/queens/tripleo-image-elements.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: e3c4777df9fe9189d4b72b298244edee112e7b03
         repo: openstack/tripleo-image-elements
     version: 8.0.0.0b1
+  - projects:
+      - hash: 66592777d6e8012ed06758dccc8876cad02ec72b
+        repo: openstack/tripleo-image-elements
+    version: 8.0.0.0b2
