--- a/deliverables/queens/tripleo-puppet-elements.yaml
+++ b/deliverables/queens/tripleo-puppet-elements.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 77010c80de01f270134d14aad03ded1ae12e7112
         repo: openstack/tripleo-puppet-elements
     version: 8.0.0.0b1
+  - projects:
+      - hash: 97df5376053b2a1ebdc65de6403d873fab7c1600
+        repo: openstack/tripleo-puppet-elements
+    version: 8.0.0.0b2
