--- a/deliverables/queens/tripleo-ui.yaml
+++ b/deliverables/queens/tripleo-ui.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 6a8e03409e3f8f91a8bca4cd25b93006171a02ae
         repo: openstack/tripleo-ui
     version: 8.0.0
+  - projects:
+      - hash: f2820bd0cc6560cf9467cca92ff2f7d749a43fe1
+        repo: openstack/tripleo-ui
+    version: 8.1.0
