--- a/deliverables/queens/tripleo-validations.yaml
+++ b/deliverables/queens/tripleo-validations.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 27193e01a42aa00c2058d49c6ae7cf9cdd659aa7
         repo: openstack/tripleo-validations
     version: 8.0.0
+  - projects:
+      - hash: 6406ef8bd8b99bc7764aed28db55ccbb0ce984ce
+        repo: openstack/tripleo-validations
+    version: 8.1.0
