--- a/deliverables/queens/instack-undercloud.yaml
+++ b/deliverables/queens/instack-undercloud.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 3fe99d45a844fab5a2f5b938753b70a0d8f01e45
         repo: openstack/instack-undercloud
     version: 8.0.0
+  - projects:
+      - hash: 758e8caee0caf791889577be5d53e5f1a5187179
+        repo: openstack/instack-undercloud
+    version: 8.1.0
