--- a/deliverables/queens/os-apply-config.yaml
+++ b/deliverables/queens/os-apply-config.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 8db1c024eee51cc994e19ec44b6d3a141d070ec5
         repo: openstack/os-apply-config
     version: 8.0.0
+  - projects:
+      - hash: 8dbeb75d798869fe186d1d916314b2362b402c4e
+        repo: openstack/os-apply-config
+    version: 8.1.0
