--- a/deliverables/queens/os-refresh-config.yaml
+++ b/deliverables/queens/os-refresh-config.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 1c38f870605c65cbc61d718266ed0798d9a479ba
         repo: openstack/os-refresh-config
     version: 8.0.0
+  - projects:
+      - hash: e6f3b30ed50b6ac53f1ea8943f31ad8a548f687d
+        repo: openstack/os-refresh-config
+    version: 8.1.0
